fix tooltip for dark mode behavior

--- a/assets/style.css
+++ b/assets/style.css
@@ -146,7 +146,6 @@ input {
 .chat .chats {
   height: calc(100% - 144px);
   overflow-y: auto;
-  scroll-behavior: smooth;
   background-color: var(--bg-chats);
 }
 
@@ -210,6 +209,16 @@ input {
   padding-top: 1rem;
 }
 
+.discussion::-webkit-scrollbar {
+  background: var(--bg-scrollbar);
+  width: 8px;
+}
+
+.discussion::-webkit-scrollbar-thumb {
+  background: var(--scrollbar-thumb);
+  border-radius: 5px;
+}
+
 .discussion .mess.sent {
   background-color: var(--bg-mess-sent);
   align-self: start;
@@ -232,16 +241,6 @@ input {
   font: 0.6em;
   padding: 0;
   color: var(--text-color);
-}
-
-.discussion::-webkit-scrollbar {
-  background: var(--bg-scrollbar);
-  width: 8px;
-}
-
-.discussion::-webkit-scrollbar-thumb {
-  background: var(--scrollbar-thumb);
-  border-radius: 5px;
 }
 
 .content_chat .input-group {
